--- a/R3S/app/src/main/res/values/strings.xml
+++ b/R3S/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="subscribe_header">Enter the url of the RSS that you want to follow or select on of
         our most popular channels</string>
     <string name="subscribe_button">Subscribe</string>
+    <string name="app_id">990512607637574</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -99,4 +100,5 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="head_arrowImage">Pull down to refresh...</string>
+    <string name="facebook_share">Share</string>
 </resources>
