--- a/R3S/app/src/main/res/values/strings.xml
+++ b/R3S/app/src/main/res/values/strings.xml
@@ -101,4 +101,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="head_arrowImage">Pull down to refresh...</string>
     <string name="facebook_share">Share</string>
+    <string name="title_activity_main_activityfsd">MainActivityfsd</string>
 </resources>
