--- a/R3S/app/src/main/res/values/strings.xml
+++ b/R3S/app/src/main/res/values/strings.xml
@@ -104,4 +104,6 @@
     <string name="title_activity_main_activityfsd">MainActivityfsd</string>
     <string name="title_activity_main_activitynbmb">MainActivitynbmb</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_entry">Entry</string>
+    <string name="title_activity_content">ContentActivity</string>
 </resources>
