--- a/R3S/app/src/main/res/values/strings.xml
+++ b/R3S/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">R3S</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_entries">Entries</string>
-    <string name="subscribe_header">Enter the url of the RSS that you want to follow or select on of
+    <string name="subscribe_header">Enter the url of the RSS that you want to follow or select one of
         our most popular channels</string>
     <string name="subscribe_button">Subscribe</string>
     <string name="app_id">990512607637574</string>
